# advent-of-code

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: test-workflow.yml
modules/day1/: CMakeLists.txt
modules/day1/include/: day1.hpp
modules/day1/src/: day1.cpp
modules/day1/tests/: test_day1.cpp
modules/day2/: CMakeLists.txt
modules/day2/include/: day2.hpp
modules/day2/src/: day2.cpp
modules/day2/tests/: test_day2.cpp
modules/day3/: CMakeLists.txt
modules/day3/include/: day3.hpp
modules/day3/src/: day3.cpp
modules/day3/tests/: test_day3.cpp
modules/day4/: CMakeLists.txt
modules/day4/include/: day4.hpp
modules/day4/src/: day4.cpp
modules/day4/tests/: test_day4.cpp
modules/day5/: CMakeLists.txt
modules/day5/include/: day5.hpp
modules/day5/src/: day5.cpp
